// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`active > matches snapshot 1`] = `
<div>
  <button
    aria-pressed="true"
    class="bg-transparent border border-gray-400 px-2 py rounded !bg-gray-200 dark:!bg-gray-600"
  >
    Toggle
  </button>
</div>
`;

exports[`not active > matches snapshot 1`] = `
<div>
  <button
    aria-pressed="false"
    class="bg-transparent border border-gray-400 px-2 py rounded"
  >
    Toggle
  </button>
</div>
`;
